# gwa_downloader

./: .gitignore  NOTES.md  README.md  pyproject.toml
gwa_downloader/: copy_files.py  globals.py  helpers.py  io.py  lib.py  main.py  media_down.py  reddit_post.py  scrape.py  struct.py  thing.py  url.py
gwa_downloader/frontend/: index.html
gwa_downloader/frontend/src/: home.html  post.html
