[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gwa_downloader"]

[project]
name = "gwa-downloader"
version = "0.0.1"
authors = [{ name="Matt Stirling", email="stirlingmattmarkus@gmail.com" }]
description = "Downloader for r/GoneWithTheWind"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp",
    "handymatt"
]

[project.scripts]
gwa-downloader = "gwa_downloader.main:cli"

[project.urls]
Homepage = "https://github.com/MattThePerson/gwa_downloader"
